react-fastapi-todos-chart/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: todos-istio-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todos-route
  namespace: default
spec:
  parentRefs:
    - name: todos-istio-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: todos-fastapi-backend-chart-service
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todos-react-frontend-chart-service
          port: 80
